Surfacing resource usage across types and new /usage endpoint
